# rust-activities

./: README.md  create_vec.md  for_loop_performance.md  print_vec_u8_like_python.md
book_exercises/: Cargo.toml  README.md
book_exercises/src/: main.rs  statics_analysis.rs
book_projects/blog_oo/: Cargo.toml
book_projects/blog_sp/: Cargo.toml
book_projects/hello/: 404.html  Cargo.toml
book_projects/minigrep/: Cargo.toml  README.md
book_projects/simple_gui/: Cargo.toml
book_scripts/an_enum/: Cargo.toml
book_scripts/closures_anonymous_functions/: Cargo.toml
book_scripts/first_macro/: Cargo.toml
book_scripts/first_macro/hello_macro/: Cargo.toml
book_scripts/first_macro/hello_macro/src/: lib.rs
book_scripts/first_macro/hello_macro_derive/: Cargo.toml
book_scripts/first_macro/hello_macro_derive/src/: lib.rs
book_scripts/functions/: Cargo.toml
book_scripts/generic_types/: Cargo.toml
book_scripts/guessing_game/: Cargo.toml
book_scripts/iterators/: Cargo.toml
book_scripts/life_times_test/: Cargo.toml
book_scripts/memory_leek/: Cargo.toml
book_scripts/mock_objects/: Cargo.toml
book_scripts/oop_features/: Cargo.toml
book_scripts/rectangles/: Cargo.toml
book_scripts/shared_state_cuncurrency/: Cargo.toml
book_scripts/test_test/: Cargo.toml
book_scripts/threads_with_spawn/: Cargo.toml
book_scripts/trait_test/: Cargo.toml
book_scripts/tree_data_structure/: Cargo.toml
book_scripts/unsafe_code/: Cargo.toml
book_scripts/using_boxes/: Cargo.toml
src/: employee_control.rs  main.rs  pig_latin.rs  statics_analysis.rs
(+33 files in other folders)
